Fixed issue Added deletions Added Admin new finc
